--- a/LAB5/LAB5.ioc
+++ b/LAB5/LAB5.ioc
@@ -9,12 +9,16 @@ Mcu.IP3=TIM2
 Mcu.IPNb=4
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA5
-Mcu.Pin1=PA6
-Mcu.Pin2=VP_SYS_VS_ND
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.Pin4=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=5
+Mcu.Pin0=PA1
+Mcu.Pin1=PA2
+Mcu.Pin2=PA3
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=VP_SYS_VS_ND
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -32,6 +36,22 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=LED_RED1
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=LED_RED2
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=LED_RED3
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=LED_RED4
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LED_RED
 PA5.Locked=true
